[tool.poetry]
name = "yidong"
version = "0.1.0"
description = ""
authors = ["Jun Tian <tianjun.cpp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "5.0.0-beta.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
