[tool.poetry]
name = "yidong"
version = "0.0.17"
description = ""
authors = ["Yi Team <yi@01.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
jsonargparse = { extras = ["argcomplete", "signatures"], version = "^4.33.2" }
rich = "^13.9.3"

[tool.poetry.scripts]
yidong = "yidong.client:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
